force-app/main/default/objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Time Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>