force-app/main/default/objects/Time_Tracker__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Time Trackers</relationshipLabel>
    <relationshipName>Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>