force-app/main/default/objects/Time_Tracker__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>TEXT(FLOOR((End_Time__c - Start_Time__c) * 24)) &amp; &quot; Hours &quot; &amp;
TEXT(FLOOR(MOD((End_Time__c - Start_Time__c) * 1440, 60))) &amp; &quot; Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <type>Text</type>
</CustomField>