force-app/main/default/objects/Time_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Id__c</columns>
    <columns>Name__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>