force-app/main/default/objects/Time_Tracker__c/listViews/TimeTrackerList.listView-meta.xml
<ListView>
    <fullName>TimeTrackerList</fullName>
    <columns>Name__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>TimeTrackerList</label>
</ListView>